--- a/index.html
+++ b/index.html
@@ -8,88 +8,66 @@
   maximum-scale=5"
     />
 
-    <link rel="icon" href="devchallenges.png" />
+    <link rel="icon" href="assets/img/devchallenges.png" />
 
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="https://devchallenges.io/"
-    />
+    <link rel="shortcut icon" type="image/x-icon" href="https://devchallenges.io/" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
       rel="stylesheet"
     />
-
-    <title>Devchallenges</title>
-
-    <style>
-      body {
-        font-family: "Poppins", sans-serif;
-      }
-
-      ul {
-        padding-left: 24px;
-      }
-
-      li {
-        margin-bottom: 8px;
-      }
-
-      .welcome {
-        max-width: 800px;
-        margin: 0 auto;
-      }
-
-      .welcome-text {
-        margin-top: 30vh;
-        font-weight: 500;
-      }
-
-      .welcome-text p {
-        font-size: 1rem;
-        font-weight: 400;
-      }
-
-      .welcome-text h1 {
-        font-size: 1.5rem;
-      }
-
-      .welcome-text a {
-        color: #f7542e;
-      }
-    </style>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <title>My team Page</title>
   </head>
   <body>
-    <div class="welcome">
-      <div class="welcome-text">
-        <h1>
-          Welcome to
-          <a href="https://devchallenges.io/" target="_blank"
-            >devchallenges.io</a
-          >
-        </h1>
-
+    <div class="container">
+      <header>
+        <h1>The creative crew</h1>
+        <div>
+          <h2>WHO WE ARE</h2>
+          <p>
+            We are team of creatively diverse. driven. innovative individuals working in various
+            locations from the world.
+          </p>
+        </div>
+      </header>
+      <section class="main">
+        <div class="profile">
+          <img src="./assets/img/photo1.png" alt="" class="photo" />
+          <p class="role">Product owner</p>
+          <p class="name">Bill Mahoney</p>
+        </div>
+        <div class="profile">
+          <img src="./assets/img/photo2.png" alt="" class="photo" />
+          <p class="role">Art director</p>
+          <p class="name">Saba Cabrera</p>
+        </div>
+        <div class="profile">
+          <img src="./assets/img/photo3.png" alt="" class="photo" />
+          <p class="role">Tech lead</p>
+          <p class="name">Shae Le</p>
+        </div>
+        <div class="profile">
+          <img src="./assets/img/photo4.png" alt="" class="photo" />
+          <p class="role">UX Designer</p>
+          <p class="name">Skylah Lu</p>
+        </div>
+        <div class="profile">
+          <img src="./assets/img/photo5.png" alt="" class="photo" />
+          <p class="role">Developer</p>
+          <p class="name">Griff Richards</p>
+        </div>
+        <div class="profile">
+          <img src="./assets/img/photo6.png" alt="" class="photo" />
+          <p class="role">Developer</p>
+          <p class="name">Stan John</p>
+        </div>
+      </section>
+      <footer>
         <p>
-          If you have any questions, don't hesitate to ask on Discord. Here are
-          7 general steps to complete the challenge:
+          created by <a href="https://www.twitter.com/geraldelorm">username</a> - devChallenges.io
         </p>
-      </div>
-
-      <ul>
-        <li><b>Step 1:</b> Create a new repository on github</li>
-        <li><b>Step 2:</b> Copy resources, README.md to your repository</li>
-        <li>
-          <b>Step 3:</b> Login to Figma to checkout font, color, spacing,..
-        </li>
-        <li><b>Step 4:</b> Complete all user stories</li>
-        <li><b>Step 5:</b> Update README.md</li>
-        <li><b>Step 6:</b> Deploy your app and submit your solution</li>
-        <li>
-          <b>Step 7:</b> Share your solution on Discord, Twitter and other
-          platforms to ask for feedback
-        </li>
-      </ul>
+      </footer>
     </div>
   </body>
 </html>
