--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
       </section>
       <footer>
         <p>
-          created by <a href="https://www.twitter.com/geraldelorm">username</a> - devChallenges.io
+          created by <a href="https://www.twitter.com/geraldelorm" target="_blank">username</a> -
+          devChallenges.io
         </p>
       </footer>
     </div>
