--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>My team Page</title>
   </head>
