--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </section>
       <footer>
         <p>
-          created by <a href="https://www.twitter.com/geraldelorm" target="_blank">username</a> -
+          created by <a href="https://www.twitter.com/geraldelorm" target="_blank">geraldelorm</a> -
           devChallenges.io
         </p>
       </footer>
